Tallies: dark mode compatibility fixes
For elements on the tally view, replace hardcoded colors with
corresponding or closest matching codex tokens.

Bug: T396520

--- a/modules/ext.securepoll.special.less
+++ b/modules/ext.securepoll.special.less
@@ -44,19 +44,19 @@
 
 .securepoll-table {
 	margin: 1em 1em 1em 0;
-	background: #f9f9f9;
-	border: thin #a2a9b1 solid;
+	background: @background-color-neutral-subtle;
+	border: thin @border-color-base solid;
 	border-collapse: collapse;
 }
 
 .securepoll-table th,
 .securepoll-table td {
-	border: thin #a2a9b1 solid;
+	border: thin @border-color-base solid;
 	padding: 0.4em;
 }
 
 .securepoll-table th {
-	background: #f2f2f2;
+	background: @background-color-neutral;
 	text-align: center;
 }
 
